# Paper2Repro-Agent-ResearchPilot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: application_zh.md  architecture.md  github_upload_guide_zh.md  token_plan.md
examples/demo/: README.md
examples/sample_output/: repro_plan.md
prompts/: code_agent.md  experiment_agent.md  summary_agent.md  validation_agent.md
scripts/: record_demo.sh
src/paper2repro/: __init__.py  cli.py  heuristics.py  llm.py  models.py  pdf_parser.py  pipeline.py  reporter.py
src/paper2repro/agents/: base.py  code_agent.py  experiment_agent.py  summary_agent.py  validation_agent.py
tests/: test_heuristics.py  test_reporter.py
