[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "paper2repro-agent"
version = "0.1.0"
description = "An AI agent that turns research papers into reproducible experiment plans and starter code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["agent", "research", "reproducibility", "pdf", "llm", "paper"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.6",
  "pypdf>=4.2",
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["openai>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
paper2repro = "paper2repro.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paper2repro"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
